--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -1,12 +1,12 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-family: FontAwesome, 'IBM Plex Sans', Helvetica, Arial, sans-serif;
     font-size: 13px;
 }
 
 window#waybar {
-    background-color: rgba(43, 48, 59, 0.5);
-    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
+    background-color: rgba(17, 17, 17, 0.7);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.7);
     color: #ffffff;
     transition-property: background-color;
     transition-duration: .5s;
